2017-07-18  Antoine Quint  <graouts@apple.com>

        Turn tests at media/modern-media-controls/pip-support back on
        https://bugs.webkit.org/show_bug.cgi?id=174636

        Reviewed by Dean Jackson.

        * media/modern-media-controls/pip-support/ipad/pip-support-tap.html:
        * platform/ios-simulator/TestExpectations:
        * platform/mac-elcapitan/TestExpectations:
        * platform/mac/TestExpectations:

2017-07-18  Matt Lewis  <jlewis3@apple.com>

        Marked http/tests/cache/disk-cache/redirect-chain-limits.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=172662

        Unreviewed test gardening.

        * platform/wk2/TestExpectations:

2017-07-18  Matt Lewis  <jlewis3@apple.com>

        Marked http/tests/cache/disk-cache/disk-cache-vary-cookie.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=172662

        Unreviewed test gardening.

        * platform/wk2/TestExpectations:

2017-07-18  Antoine Quint  <graouts@apple.com>

        [macOS] Mouse pointer does not hide during fullscreen playback
        https://bugs.webkit.org/show_bug.cgi?id=174638
        <rdar://problem/33244399>

        Reviewed by Dean Jackson.

        Add a test that checks that the "-webkit-cursor-visibility" is set to "auto-hide" when
        in fullscreen for the media controls container.

        * media/modern-media-controls/css/webkit-cursor-visibility-auto-hide-expected.txt: Added.
        * media/modern-media-controls/css/webkit-cursor-visibility-auto-hide.html: Added.
        * platform/ios-simulator/TestExpectations:

2017-07-18  Sam Weinig  <sam@webkit.org>

        [WebIDL] Remove custom bindings for MockContentFilterSettings
        https://bugs.webkit.org/show_bug.cgi?id=174606

        Reviewed by Andy Estes.

        * contentfiltering/allow-after-add-data.html:
        * contentfiltering/allow-after-finished-adding-data.html:
        * contentfiltering/allow-after-response.html: