@@ -1573,6 +1573,7 @@ media/modern-media-controls/pip-support [ Pass ]
 media/modern-media-controls/placard [ Pass ]
 media/modern-media-controls/placard-support [ Pass ]
 media/modern-media-controls/play-pause-button [ Pass ]
+media/modern-media-controls/playback-support [ Pass ]
 media/modern-media-controls/rewind-button [ Pass ]
 media/modern-media-controls/scheduler [ Pass ]
 media/modern-media-controls/scrubber [ Pass ]
